--- a/mainapp/templates/Admin/editstudent.html
+++ b/mainapp/templates/Admin/editstudent.html
@@ -51,7 +51,7 @@
                                             <td>{{ item.email }}</td>
                                             <td>{{ item.lastname }}</td>
                                             <td>{{ item.firstname }}</td>
-
+                                          <!--  <td>{{ item.password}}</td> <!-- thêm hàng này vào!-->
                                             <td>{{ item.address }}</td>
                                             <td>{{ item.age }}</td>
                                             <td>{{ item.birthday }}</td>
